// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GorgiasChatIntegrationNavigation /> should render GorgiasChatIntegrationNavigation 1`] = `
<div>
  <nav
    class="navbar navbar"
  >
    <a
      class="link"
      data-active-class-name="active"
      data-exact="true"
      href="/app/settings/channels/gorgias_chat/16/appearance"
    >
      Appearance
    </a>
    <a
      class="link"
      data-active-class-name="active"
      data-exact="true"
      href="/app/settings/channels/gorgias_chat/16/preferences"
    >
      Preferences
    </a>
    <a
      class="link"
      data-active-class-name="active"
      href="/app/settings/channels/gorgias_chat/16/campaigns"
    >
      Campaigns
    </a>
    <a
      class="link"
      data-active-class-name="active"
      data-exact="true"
      href="/app/settings/channels/gorgias_chat/16/installation"
    >
      Installation
    </a>
  </nav>
</div>
`;

exports[`<GorgiasChatIntegrationNavigation /> should render GorgiasChatIntegrationNavigation with an installation issue icon 1`] = `
<div>
  <nav
    class="navbar navbar"
  >
    <a
      class="link"
      data-active-class-name="active"
      data-exact="true"
      href="/app/settings/channels/gorgias_chat/16/appearance"
    >
      Appearance
    </a>
    <a
      class="link"
      data-active-class-name="active"
      data-exact="true"
      href="/app/settings/channels/gorgias_chat/16/preferences"
    >
      Preferences
    </a>
    <a
      class="link"
      data-active-class-name="active"
      href="/app/settings/channels/gorgias_chat/16/campaigns"
    >
      Campaigns
    </a>
    <a
      class="link"
      data-active-class-name="active"
      data-exact="true"
      href="/app/settings/channels/gorgias_chat/16/installation"
    >
      Installation
      <img
        alt="status icon"
        class="redDot"
        src="test-file-stub"
      />
    </a>
  </nav>
</div>
`;
